<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/instructions_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:text="@string/instructions" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/operand1_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/operand1_hint"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/operations_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/add_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_radio"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/subtract_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtract_radio" />

            <RadioButton
                android:id="@+id/multiply_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiply_radio" />

            <RadioButton
                android:id="@+id/divide_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/divide_radio" />

            <RadioButton
                android:id="@+id/modulo_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modulo_radio" />
        </RadioGroup>

        <EditText
            android:id="@+id/operand2_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/operand2_hint"
            android:inputType="number" />

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button" />

        <TextView
            android:id="@+id/result_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>